# kalinsky-maker

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/app/: config.py  db.py  main.py  state.py
backend/app/models/: assembly.py  source.py  tag.py
backend/app/routers/: assemblies.py  sources.py  tags.py
backend/app/services/: assembly.py  concat.py  cutter.py  probe.py
frontend/: app.js  index.html  style.css
nginx/: nginx.conf
